[metadata]
name = ct_clock
version = 0.2.0
description = curses terminal digital clock
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tech-chad/ct_clock
author = Chad Larson
author_email = techchad2@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
py_modules = ct_clock
install_requires:
python_requires = >= 3.6.1

[options.entry_points]
console_scripts =
    ct-clock = ct_clock:main