[metadata]
name = ct_clock
version = 0.5.0
description = curses terminal digital clock
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tech-chad/ct_clock
author = Chad Larson
author_email = techchad2@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
py_modules = ct_clock
install_requires:
    time-machine>=2.4.0
python_requires = >= 3.6.1

[options.packages.find]
exclude =
    tests*
    tests

[options.entry_points]
console_scripts =
    ct-clock = ct_clock:main